Modify loginById to loginByEmail